--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,9 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-image: linear-gradient(to right,rgba(33, 112, 116, 1)
+  /* background-image: linear-gradient(to right,rgba(33, 112, 116, 1)
   ,rgba(55, 116, 91, 1)
-  );
+  ); */
 }
 
 code {
@@ -15,20 +15,20 @@ code {
     monospace;
 }
 
-/* Reuse cls */
+/* Reuse cls
 .input-bg{
   background-image: linear-gradient(to right,rgba(33, 112, 116, 0.7)
   ,rgba(55, 116, 91, 0.9)
   );
 }
 .font-color{
-  color: #ffc107;
+  color: black;
   /* color: red; */
-}
 
-.default-bg{
+
+/* .default-bg{
   height: 100vh;
   background-image: linear-gradient(to right,rgba(33, 112, 116, 1)
   ,rgba(55, 116, 91, 1)
   );
-}
+} */
